# ncat

./: .gitignore  CMakeLists.txt
cross/: CMakeLists.txt  netcat.c
linux/: Makefile  config.status
linux/doc/: Makefile
linux/doc/drafts/: Makefile
linux/lib/: Makefile
linux/lib/contrib/: Makefile
linux/m4/: Makefile
linux/src/: Makefile
